--- a/src/components/Dialogs/Dialogs.module.css
+++ b/src/components/Dialogs/Dialogs.module.css
@@ -5,7 +5,7 @@
 
 .dialogsItems {
     padding: 10px;
-
+    color: white;
 }
 
 .dialogsItems .active{
@@ -17,5 +17,5 @@
 }
 
 .messages .message {
-
+    color: white;
 }
